# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
conda/: README.md  bootstrap.sh  python-project-template.yaml
tests/: __init__.py  test_pytest.py
