[tool.poetry]
name = "ppt"
version = "0.1.0"
description = "ppt – python project template"
authors = ["Mikuláš Zelinka <mikulas@zelinka.dev>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.7.0"
pre-commit = "^2.11.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.py$'
exclude = ''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]