[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "python project template"
authors = ["Mikuláš Zelinka <mikulas@zelinka.dev>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^6.2.5"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.py$'
exclude = ''

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
